# MemVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/IO/: Mmf.h  Mmf_Manage.h  Mmf_Read.h  Mmf_Types.h  Mmf_Utils.h  Mmf_Write.h
include/Vmi/: Vmi.h  Vmi_Hook.h  Vmi_Manage.h  Vmi_Process.h  Vmi_Types.h
src/IO/: Mmf.cpp
src/Vmi/: Vmi.cpp
